achievement-service.yml
apiVersion: v1
kind: Service
metadata:
  name: amb-achievement-service
spec:
  type: NodePort
  selector:
    app: amb-achievement-app
  ports:
    - port: 8083
      targetPort: 8083
