timeline-service.yml
apiVersion: v1
kind: Service
metadata:
  name: amb-timeline-service
spec:
  type: NodePort
  selector:
    app: amb-timeline-app
  ports:
    - port: 8084
      targetPort: 8084
