todo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: amb-todo-service
spec:
  type: NodePort
  selector:
    app: amb-todo-app
  ports:
    - port: 8082
      targetPort: 8082
