user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: amb-user-service
spec:
  type: NodePort
  selector:
    app: amb-user-app
  ports:
    - port: 8081
      targetPort: 8081
